--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
