--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="./images/logo.svg" alt="">
       </div>
       <div class="main">
-        <div class="hero-img"><img src="./images/illustration-mockups.svg" alt=""></div>
+        <div class="hero-img"><img src="images/illustration-mockups.svg" alt=""></div>
         <div class="hero-text">
           <h1>Build The Community Your Fans Will Love</h1>
           <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
